# adaptive-evidence-graph-learning

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
aegl_project/: PAPER_READY_SUMMARY.md  README.md  evaluate.py  results_summary.json  train.py
aegl_project/aegl/: __init__.py  causal_verification.py  config.py  data.py  encoder.py  graph_transformer.py  losses.py  memory.py  metrics.py  model.py  router.py  uncertainty.py
aegl_project/tests/: test_real_data.py
common/: base_module.py
configs/: default.yaml
evaluation/: evaluator.py
mnt/user-data/outputs/AEGL_Project/: Adaptive_Evidence_Graph_Learning_Complete.ipynb  README.md  requirements.txt
mnt/user-data/outputs/AEGL_Project/backend/: aegl_model.py  dataset.py  main.py
mnt/user-data/outputs/AEGL_Project/frontend/: index.html
registry/: __init__.py  model_registry.py
trainer/: checkpoint.py  trainer.py
utils/: files.py  logger.py  seed.py
